--- a/package.json
+++ b/package.json
@@ -18,17 +18,21 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "@ember/optional-features": "^1.0.0",
+    "@ember/jquery": "^1.1.0",
+    "@ember/optional-features": "^1.3.0",
     "babel-eslint": "^10.0.3",
+    "bootstrap": "^4.4.1",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.5.2",
+    "ember-auto-import": "^1.5.3",
     "ember-cli": "~3.14.0",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.11.1",
+    "ember-cli-bootstrap-4": "^0.12.0",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^4.0.5",
     "ember-cli-inject-live-reload": "^2.0.1",
+    "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
@@ -41,10 +45,14 @@
     "ember-resolver": "^5.3.0",
     "ember-source": "~3.14.1",
     "ember-welcome-page": "^4.0.0",
+    "emberfire": "^3.0.0-rc.6",
     "eslint-plugin-ember": "^7.1.0",
     "eslint-plugin-node": "^10.0.0",
+    "firebase": "^7.9.3",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.9.0"
+    "popper.js": "^1.16.1",
+    "qunit-dom": "^0.9.0",
+    "sass": "^1.26.2"
   },
   "engines": {
     "node": "8.* || >= 10.*"
